# pyzill

./: .gitignore  README.md  pyproject.toml  test.py
src/pyzill/: __init__.py  details.py  parse.py  search.py  utils.py
