[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyzill"
version = '0.0.2'
description = 'Zillow scraper in Python'
authors = [
  { name="John Balvin", email="johnchristian@hotmail.es" },
]
readme= "README.md"
license = { text = "MIT" }
keywords=['zillow', 'scraper', 'crawler']
dependencies=['bs4','requests']

[project.urls]
Homepage='https://github.com/johnbalvin/pyzill'